--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,76 +1,104 @@
-<!-- /frontend/about.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us | Dog Armor Recommender</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Us | DogArmor</title>
+
+  <!-- TailwindCSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="/style.css" />
+
+  <!-- Lucide Icons CDN -->
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
-<body class="text-gray-800 font-sans">
-  <!-- Navigation Bar -->
-  <nav class="bg-gray-100 p-4 shadow-md flex justify-between items-center">
-    <a href="index.html" class="text-xl font-bold text-blue-600">DogArmor</a>
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+  <!-- Navbar -->
+  <nav class="bg-white p-4 shadow flex justify-between items-center">
+    <a href="index.html" class="flex items-center gap-2 text-blue-600 font-bold text-xl">
+      <!-- Lucide icon for dog -->
+      <i data-lucide="dog" class="w-6 h-6"></i>
+      DogArmor
+    </a>
     <div class="space-x-6 text-sm">
-      <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Home</a>
-      <a href="how-it-works.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">How it Works</a>
-      <a href="demo.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Demo</a>
-      <a href="features.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Features</a>
-      <a href="why-us.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Why Our Company Matters</a>
-      <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">About Us</a>
-      <a href="team.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Team</a>
+      <a href="index.html" class="hover:text-blue-600 font-medium">Home</a>
+      <a href="how-it-works.html" class="hover:text-blue-600 font-medium">How it Works</a>
+      <a href="demo.html" class="hover:text-blue-600 font-medium">Demo</a>
+      <a href="features.html" class="hover:text-blue-600 font-medium">Features</a>
+      <a href="why-us.html" class="hover:text-blue-600 font-medium">Why Us</a>
+      <a href="about.html" class="hover:text-blue-600 font-medium">About</a>
+      <a href="team.html" class="hover:text-blue-600 font-medium">Team</a>
     </div>
   </nav>
 
-  <!-- Hero -->
-  <section class="section section-light bg-blue-50 py-16 text-center" data-aos="fade-up">
-    <h1 class="text-4xl font-bold mb-4">About DogArmor</h1>
-    <p class="text-lg max-w-2xl mx-auto">Built to help every dog find the perfect gear — intelligently, compassionately, and affordably.</p>
+  <!-- Hero Section -->
+  <section class="bg-blue-100 py-16 text-center px-4">
+    <h1 class="text-4xl font-extrabold text-blue-700 mb-4">About DogArmor</h1>
+    <p class="text-lg max-w-2xl mx-auto text-blue-900">
+      Built to help every dog find the perfect gear — intelligently, compassionately, and affordably.
+    </p>
   </section>
 
   <!-- Mission -->
-  <section class="py-12 px-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold mb-4">Our Mission</h2>
-    <p> Our focus is to make life easier for dog owners. Our AI-powered recommendations take the guesswork out of choosing the right collars, harnesses, and leashes — all based on your dog’s unique traits. No more confusion. Just gear that fits, works, and makes every walk better. </p>
+  <section class="py-12 px-6 max-w-4xl mx-auto bg-white rounded shadow-md my-10">
+    <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
+      <i data-lucide="target" class="w-5 h-5 text-blue-600"></i>
+      Our Mission
+    </h2>
+    <p>
+      Our AI-powered tool takes the guesswork out of finding the right collar, harness, or leash. Based on your dog’s traits — from breed to behavior — we provide smart recommendations that actually work.
+    </p>
   </section>
 
-  <section class="py-16 bg-white">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-4">What Makes Us Different</h2>
-      <p class="text-lg text-gray-700 mb-6">
-        We don’t just guess. Our system combines your dog’s photo with their breed, size, and behavior data to deliver gear recommendations that actually work — for comfort, safety, and real-life fit. Your dog isn’t a size chart. That’s why we are the first company to go beyond the basics — combining images and data to understand each pup’s unique needs. It’s how we deliver gear that actually fits, feels good, and works in real life.
-      </p>
-  
-      <!-- Visual placeholder (replace with actual graphic or mockup later) -->
-      <img src="https://via.placeholder.com/400x300" alt="Visual showing input to output process" class="mx-auto rounded-xl shadow-lg w-full max-w-xl" />
-      
-      <p class="text-sm text-gray-500 mt-4 italic">
-        From image to insight — built to understand every dog’s unique needs.
-      </p>
-    </div>
+  <!-- What Makes Us Different -->
+  <section class="py-16 px-6 max-w-4xl mx-auto bg-orange-50 rounded shadow-md my-10">
+    <h2 class="text-3xl font-bold text-orange-700 mb-6 flex items-center gap-2">
+      <i data-lucide="star" class="w-6 h-6 text-orange-600"></i>
+      What Makes Us Different
+    </h2>
+    <p class="text-lg text-gray-800 mb-8">
+      Your dog isn’t a size chart. We combine images and data to understand real-world fit, comfort, and style.
+    </p>
+    <img src="https://via.placeholder.com/400x300" alt="Process illustration" class="mx-auto rounded-lg shadow-lg w-full max-w-xl" />
+    <p class="text-sm text-gray-500 mt-4 italic">
+      From image to insight — built to understand every dog’s unique needs.
+    </p>
   </section>
-  
+
   <!-- Our Story -->
-  <section class="py-12 px-6 bg-gray-50 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold mb-4">How It All Started</h2>
-    <p>Interesting enough, it all started with a simple thought: “Why is it so hard to find the right gear for your dog?” To answer this, we built a solution that brings clarity and convenience, rather than confusion, to pet care.</p>
+  <section class="py-12 px-6 max-w-4xl mx-auto bg-white rounded shadow-md my-10">
+    <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
+      <i data-lucide="book-open" class="w-5 h-5 text-blue-600"></i>
+      How It All Started
+    </h2>
+    <p>
+      We started with a simple question: “Why is it so hard to find gear that fits?” Our journey began with one problem — and grew into a solution to make life easier for every pet parent.
+    </p>
   </section>
 
-  <!-- Values -->
-  <section class="py-12 px-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold mb-4">What We Believe In</h2>
-    <ul class="list-disc list-inside space-y-2">
+  <!-- Our Values -->
+  <section class="py-12 px-6 max-w-4xl mx-auto bg-gray-100 rounded shadow-md my-10">
+    <h2 class="text-2xl font-bold text-blue-700 mb-6 flex items-center gap-2">
+      <i data-lucide="heart" class="w-6 h-6 text-red-500"></i>
+      What We Believe In
+    </h2>
+    <ul class="list-disc list-inside space-y-2 text-gray-700">
       <li>Your pet's comfort and safety should come first</li>
-      <li>Technology should focus on solving real problems</li>
-      <li>Simple design, but smart results</li>
-      <li>Every dog deserves gear that fits just right</li>
+      <li>Technology should solve real problems</li>
+      <li>Simple design, smart results</li>
+      <li>Every dog deserves a perfect fit</li>
     </ul>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-100 py-6 text-center mt-16">
-    <p class="text-sm">&copy; 2025 DogArmor. All rights reserved.</p>
+  <footer class="bg-white border-t border-gray-300 py-6 text-center mt-16 text-sm text-gray-500">
+    &copy; 2025 DogArmor. All rights reserved.
   </footer>
+
+  <!-- Initialize Lucide icons -->
+  <script>
+    lucide.createIcons();
+  </script>
+
 </body>
 </html>
