--- a/frontend/why-us.html
+++ b/frontend/why-us.html
@@ -9,6 +9,18 @@
 </head>
 <body class="bg-gradient-to-b from-gray-900 via-gray-800 to-gray-900 text-gray-200 font-sans min-h-screen flex flex-col">
 
+  <!-- Background SVG -->
+  <div class="absolute top-0 left-0 w-full h-[600px] -z-10 opacity-20 overflow-hidden pointer-events-none">
+    <svg id="visual" viewBox="0 0 900 600" width="100%" height="100%" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+      <rect x="0" y="0" width="900" height="600" fill="#001220"></rect>
+      <path d="M0 394L21.5 402.5C43 411 86 428 128.8 427.3C171.7 426.7 214.3 408.3 257.2 395.7C300 383 343 376 385.8 378C428.7 380 471.3 391 514.2 402.5C557 414 600 426 642.8 417.8C685.7 409.7 728.3 381.3 771.2 367.7C814 354 857 355 878.5 355.5L900 356L900 601L878.5 601C857 601 814 601 771.2 601C728.3 601 685.7 601 642.8 601C600 601 557 601 514.2 601C471.3 601 428.7 601 385.8 601C343 601 300 601 257.2 601C214.3 601 171.7 601 128.8 601C86 601 43 601 21.5 601L0 601Z" fill="#cd4a45"></path>
+      <path d="M0 454L21.5 453.8C43 453.7 86 453.3 128.8 457.7C171.7 462 214.3 471 257.2 472.2C300 473.3 343 466.7 385.8 454.3C428.7 442 471.3 424 514.2 425.2C557 426.3 600 446.7 642.8 452.7C685.7 458.7 728.3 450.3 771.2 445.7C814 441 857 440 878.5 439.5L900 439L900 601L878.5 601C857 601 814 601 771.2 601C728.3 601 685.7 601 642.8 601C600 601 557 601 514.2 601C471.3 601 428.7 601 385.8 601C343 601 300 601 257.2 601C214.3 601 171.7 601 128.8 601C86 601 43 601 21.5 601L0 601Z" fill="#9b2342"></path>
+      <path d="M0 506L21.5 502.3C43 498.7 86 491.3 128.8 482.8C171.7 474.3 214.3 464.7 257.2 461.2C300 457.7 343 460.3 385.8 457.5C428.7 454.7 471.3 446.3 514.2 449.2C557 452 600 466 642.8 471.2C685.7 476.3 728.3 472.7 771.2 468.3C814 464 857 459 878.5 456.5L900 454L900 601L878.5 601C857 601 814 601 771.2 601C728.3 601 685.7 601 642.8 601C600 601 557 601 514.2 601C471.3 601 428.7 601 385.8 601C343 601 300 601 257.2 601C214.3 601 171.7 601 128.8 601C86 601 43 601 21.5 601L0 601Z" fill="#7b0e3c"></path>
+      <path d="M0 520L21.5 517.7C43 515.3 86 510.7 128.8 506.2C171.7 501.7 214.3 497.3 257.2 501C300 504.7 343 516.3 385.8 515C428.7 513.7 471.3 499.3 514.2 494.8C557 490.3 600 495.7 642.8 502.8C685.7 510 728.3 519 771.2 520.7C814 522.3 857 516.7 878.5 513.8L900 511L900 601L878.5 601C857 601 814 601 771.2 601C728.3 601 685.7 601 642.8 601C600 601 557 601 514.2 601C471.3 601 428.7 601 385.8 601C343 601 300 601 257.2 601C214.3 601 171.7 601 128.8 601C86 601 43 601 21.5 601L0 601Z" fill="#9b2342"></path>
+      <path d="M0 551L21.5 547.2C43 543.3 86 535.7 128.8 536.3C171.7 537 214.3 546 257.2 549.8C300 553.7 343 552.3 385.8 550.2C428.7 548 471.3 545 514.2 547.5C557 550 600 558 642.8 559.8C685.7 561.7 728.3 557.3 771.2 557.8C814 558.3 857 563.7 878.5 566.3L900 569L900 601L878.5 601C857 601 814 601 771.2 601C728.3 601 685.7 601 642.8 601C600 601 557 601 514.2 601C471.3 601 428.7 601 385.8 601C343 601 300 601 257.2 601C214.3 601 171.7 601 128.8 601C86 601 43 601 21.5 601L0 601Z" fill="#cd4a45"></path>
+    </svg>
+  </div>
+
   <!-- Navbar -->
   <nav class="bg-gray-900 bg-opacity-90 backdrop-blur-md p-4 shadow-lg flex justify-between items-center sticky top-0 z-50">
     <a href="index.html" class="text-amber-400 hover:text-amber-300 font-extrabold text-xl transition duration-300">DogArmor</a>
@@ -24,70 +36,74 @@
   </nav>
 
   <!-- Content Section -->
-  <main class="flex-grow max-w-4xl mx-auto px-6 py-20 space-y-12 overflow-y-auto scrollbar-thin scrollbar-thumb-amber-600 scrollbar-track-gray-800 rounded-lg">
+  <main class="flex-grow max-w-4xl mx-auto px-6 pt-[350px] py-20 space-y-16 overflow-y-auto scrollbar-thin scrollbar-thumb-amber-600 scrollbar-track-gray-800 rounded-lg">
 
-    <header class="text-center">
-      <h1 class="text-5xl font-extrabold text-amber-400 mb-6 drop-shadow-lg">Why Our Company Matters</h1>
-      <p class="max-w-3xl mx-auto text-lg text-amber-100/90 leading-relaxed">
+    <header class="text-center max-w-3xl mx-auto">
+      <h1 class="text-5xl font-extrabold text-amber-400 mb-6 drop-shadow-[0_4px_6px_rgba(205,74,69,0.8)] leading-tight">Why Our Company Matters</h1>
+      <p class="text-lg text-amber-100/90 leading-relaxed tracking-wide">
         At DogArmor, we believe every dog deserves gear that fits perfectly — because a happy dog means a happy owner. 
         Our mission is to combine technology and care to make choosing dog gear simple, smart, and stress-free.
       </p>
     </header>
 
     <!-- Cards -->
-    <section class="space-y-10">
+    <section class="space-y-12">
 
       <!-- Card 1 -->
-      <article class="bg-gray-800 bg-opacity-80 rounded-2xl shadow-xl p-8 flex items-start gap-6 hover:bg-gray-700 transition">
-        <div class="flex-shrink-0 text-amber-400">
+      <article class="bg-gray-800 bg-opacity-80 rounded-3xl shadow-[0_8px_20px_rgba(205,74,69,0.6)] p-8 flex items-start gap-8 hover:bg-gray-700 transition duration-300 ease-in-out cursor-default">
+        <div class="flex-shrink-0 text-amber-400 flex items-center justify-center w-14 h-14 bg-amber-900 bg-opacity-30 rounded-full shadow-md drop-shadow-md">
           <!-- Lucide Shield Check Icon -->
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 stroke-amber-400" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 stroke-amber-400" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" >
             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
             <path d="M9 12l2 2 4-4" />
           </svg>
         </div>
         <div>
-          <h2 class="text-3xl font-semibold text-amber-300 mb-2">Solving Real Problems</h2>
-          <p class="text-amber-100 leading-relaxed">
+          <h2 class="text-3xl font-semibold text-amber-300 mb-3 drop-shadow-[0_2px_4px_rgba(205,74,69,0.8)]">Solving Real Problems</h2>
+          <p class="text-amber-100 leading-relaxed tracking-wide max-w-xl">
             Finding the right collar, harness, or leash can be overwhelming with so many options. We're here to make dog gear personal rather than common found. Every dog deserves comfort, and every owner deserves happiness.
           </p>
         </div>
       </article>
 
       <!-- Card 2 -->
-      <article class="bg-gray-800 bg-opacity-80 rounded-2xl shadow-xl p-8 flex items-start gap-6 hover:bg-gray-700 transition">
-        <div class="flex-shrink-0 text-amber-400">
+      <article class="bg-gray-800 bg-opacity-80 rounded-3xl shadow-[0_8px_20px_rgba(205,74,69,0.6)] p-8 flex items-start gap-8 hover:bg-gray-700 transition duration-300 ease-in-out cursor-default">
+        <div class="flex-shrink-0 text-amber-400 flex items-center justify-center w-14 h-14 bg-amber-900 bg-opacity-30 rounded-full shadow-md drop-shadow-md">
           <!-- Lucide Star Icon -->
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 stroke-amber-400" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M12 17.27L18.18 21 16.54 13.97 22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 stroke-amber-400" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" >
+            <polygon points="12 2 15 11 22 11 17 16 19 22 12 18 5 22 7 16 2 11 9 11 12 2"/>
           </svg>
         </div>
         <div>
-          <h2 class="text-3xl font-semibold text-amber-300 mb-2">What Makes Us Special</h2>
-          <p class="text-amber-100 leading-relaxed">
-            Whether you're new to dog harnesses or are upgrading, we've created this just for you, simplifying the process. Instead of only gear size and confusing variety, we're the first of our kind to account for your dog's needs on a personal level.
+          <h2 class="text-3xl font-semibold text-amber-300 mb-3 drop-shadow-[0_2px_4px_rgba(205,74,69,0.8)]">Expertise & Care</h2>
+          <p class="text-amber-100 leading-relaxed tracking-wide max-w-xl">
+            We combine knowledge of dogs with thoughtful tech to recommend gear tailored to breed, size, and activity level — all while keeping your budget in mind.
           </p>
         </div>
       </article>
 
       <!-- Card 3 -->
-      <article class="bg-gray-800 bg-opacity-80 rounded-2xl shadow-xl p-8 flex items-start gap-6 hover:bg-gray-700 transition">
-        <div class="flex-shrink-0 text-amber-400">
-          <!-- Lucide Shield Icon -->
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 stroke-amber-400" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+      <article class="bg-gray-800 bg-opacity-80 rounded-3xl shadow-[0_8px_20px_rgba(205,74,69,0.6)] p-8 flex items-start gap-8 hover:bg-gray-700 transition duration-300 ease-in-out cursor-default">
+        <div class="flex-shrink-0 text-amber-400 flex items-center justify-center w-14 h-14 bg-amber-900 bg-opacity-30 rounded-full shadow-md drop-shadow-md">
+          <!-- Lucide Heart Icon -->
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 stroke-amber-400" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" >
+            <path d="M20.8 4.6a5.5 5.5 0 0 0-7.8 0L12 5.6l-1-1a5.5 5.5 0 0 0-7.8 7.8l1 1L12 21l7.8-7.8 1-1a5.5 5.5 0 0 0 0-7.8z" />
           </svg>
         </div>
         <div>
-          <h2 class="text-3xl font-semibold text-amber-300 mb-2">Ethics & Privacy</h2>
-          <p class="text-amber-100 leading-relaxed">
-            Your data belongs to you. We don't sell it or share it. Every feature we build puts your privacy first.
+          <h2 class="text-3xl font-semibold text-amber-300 mb-3 drop-shadow-[0_2px_4px_rgba(205,74,69,0.8)]">Passion & Purpose</h2>
+          <p class="text-amber-100 leading-relaxed tracking-wide max-w-xl">
+            DogArmor isn’t just a business — it’s a labor of love. We care deeply about dogs’ wellbeing and strive to help owners create lasting bonds with their furry friends.
           </p>
         </div>
       </article>
 
     </section>
   </main>
+
+  <footer class="bg-gray-900 bg-opacity-90 backdrop-blur-md py-6 text-center text-gray-400 text-sm mt-auto select-none">
+    &copy; 2025 DogArmor — All rights reserved.
+  </footer>
 
 </body>
 </html>
