--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us | DogArmor</title>
-
-  <!-- TailwindCSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Lucide Icons CDN -->
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body class="text-gray-800 font-sans">
 
   <!-- Navbar -->
   <nav class="bg-white p-4 shadow flex justify-between items-center">
     <a href="index.html" class="flex items-center gap-2 text-blue-600 font-bold text-xl">
-      <!-- Lucide icon for dog -->
       <i data-lucide="dog" class="w-6 h-6"></i>
       DogArmor
     </a>
@@ -39,55 +34,63 @@
     </p>
   </section>
 
-  <!-- Mission -->
-  <section class="py-12 px-6 max-w-4xl mx-auto bg-white rounded shadow-md my-10">
-    <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
-      <i data-lucide="target" class="w-5 h-5 text-blue-600"></i>
-      Our Mission
-    </h2>
-    <p>
-      Our AI-powered tool takes the guesswork out of finding the right collar, harness, or leash. Based on your dog’s traits — from breed to behavior — we provide smart recommendations that actually work.
-    </p>
+  <!-- Section 1 Background -->
+  <section class="bg-gray-50 py-20">
+    <div class="max-w-4xl mx-auto bg-white rounded shadow-md py-12 px-6">
+      <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
+        <i data-lucide="target" class="w-5 h-5 text-blue-600"></i>
+        Our Mission
+      </h2>
+      <p>
+        Our AI-powered tool takes the guesswork out of finding the right collar, harness, or leash. Based on your dog’s traits — from breed to behavior — we provide smart recommendations that actually work.
+      </p>
+    </div>
   </section>
 
-  <!-- What Makes Us Different -->
-  <section class="py-16 px-6 max-w-4xl mx-auto bg-orange-50 rounded shadow-md my-10">
-    <h2 class="text-3xl font-bold text-orange-700 mb-6 flex items-center gap-2">
-      <i data-lucide="star" class="w-6 h-6 text-orange-600"></i>
-      What Makes Us Different
-    </h2>
-    <p class="text-lg text-gray-800 mb-8">
-      Your dog isn’t a size chart. We combine images and data to understand real-world fit, comfort, and style.
-    </p>
-    <img src="https://via.placeholder.com/400x300" alt="Process illustration" class="mx-auto rounded-lg shadow-lg w-full max-w-xl" />
-    <p class="text-sm text-gray-500 mt-4 italic">
-      From image to insight — built to understand every dog’s unique needs.
-    </p>
+  <!-- Section 2 Background -->
+  <section class="bg-orange-100 py-20">
+    <div class="max-w-4xl mx-auto bg-orange-50 rounded shadow-md py-16 px-6">
+      <h2 class="text-3xl font-bold text-orange-700 mb-6 flex items-center gap-2">
+        <i data-lucide="star" class="w-6 h-6 text-orange-600"></i>
+        What Makes Us Different
+      </h2>
+      <p class="text-lg text-gray-800 mb-8">
+        Your dog isn’t a size chart. We combine images and data to understand real-world fit, comfort, and style.
+      </p>
+      <img src="https://via.placeholder.com/400x300" alt="Process illustration" class="mx-auto rounded-lg shadow-lg w-full max-w-xl" />
+      <p class="text-sm text-gray-500 mt-4 italic">
+        From image to insight — built to understand every dog’s unique needs.
+      </p>
+    </div>
   </section>
 
-  <!-- Our Story -->
-  <section class="py-12 px-6 max-w-4xl mx-auto bg-white rounded shadow-md my-10">
-    <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
-      <i data-lucide="book-open" class="w-5 h-5 text-blue-600"></i>
-      How It All Started
-    </h2>
-    <p>
-      We started with a simple question: “Why is it so hard to find gear that fits?” Our journey began with one problem — and grew into a solution to make life easier for every pet parent.
-    </p>
+  <!-- Section 3 Background -->
+  <section class="bg-gray-50 py-20">
+    <div class="max-w-4xl mx-auto bg-white rounded shadow-md py-12 px-6">
+      <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
+        <i data-lucide="book-open" class="w-5 h-5 text-blue-600"></i>
+        How It All Started
+      </h2>
+      <p>
+        We started with a simple question: “Why is it so hard to find gear that fits?” Our journey began with one problem — and grew into a solution to make life easier for every pet parent.
+      </p>
+    </div>
   </section>
 
-  <!-- Our Values -->
-  <section class="py-12 px-6 max-w-4xl mx-auto bg-gray-100 rounded shadow-md my-10">
-    <h2 class="text-2xl font-bold text-blue-700 mb-6 flex items-center gap-2">
-      <i data-lucide="heart" class="w-6 h-6 text-red-500"></i>
-      What We Believe In
-    </h2>
-    <ul class="list-disc list-inside space-y-2 text-gray-700">
-      <li>Your pet's comfort and safety should come first</li>
-      <li>Technology should solve real problems</li>
-      <li>Simple design, smart results</li>
-      <li>Every dog deserves a perfect fit</li>
-    </ul>
+  <!-- Section 4 Background -->
+  <section class="bg-red-100 py-20">
+    <div class="max-w-4xl mx-auto bg-gray-100 rounded shadow-md py-12 px-6">
+      <h2 class="text-2xl font-bold text-blue-700 mb-6 flex items-center gap-2">
+        <i data-lucide="heart" class="w-6 h-6 text-red-500"></i>
+        What We Believe In
+      </h2>
+      <ul class="list-disc list-inside space-y-2 text-gray-700">
+        <li>Your pet's comfort and safety should come first</li>
+        <li>Technology should solve real problems</li>
+        <li>Simple design, smart results</li>
+        <li>Every dog deserves a perfect fit</li>
+      </ul>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -95,7 +98,6 @@
     &copy; 2025 DogArmor. All rights reserved.
   </footer>
 
-  <!-- Initialize Lucide icons -->
   <script>
     lucide.createIcons();
   </script>
